--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_CANDY_MACHINE_ID=__PLACEHOLDER__
+REACT_APP_CANDY_MACHINE_ID="HuVF6HJguV7Qvdxm5nwf6uJmgPCMmEF4LsYsHBqCBPWY"
 REACT_APP_SOLANA_NETWORK=devnet
 REACT_APP_SOLANA_RPC_HOST=https://api.devnet.solana.com
 
